fix hero image on safari mobile

--- a/src/components/HomePage/HomePageHero.module.scss
+++ b/src/components/HomePage/HomePageHero.module.scss
@@ -8,7 +8,9 @@
 .backgroundImage {
   position: absolute;
   z-index: -1;
-  inset: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
   background-image: url(../../../public/images/background.jpg);
   background-size: cover;
   @include theme.dark {
